syntax = "proto3";

option go_package = "document-generators-infrastructure-repositories-contracts";

package Edm.DocumentGenerators.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Edm.DocumentGenerators.Infrastructure.Repositories.Contracts";

import "google/protobuf/timestamp.proto";

message CreateWorkflowEntitiesSigningWorkflowsRequestElectronicParametersDb {
  string document_name = 1;
  string document_number = 2;
  google.protobuf.Timestamp document_date = 3;
  repeated string documents_attachments_ids = 4;
}
